src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_keywords_as_field_names.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected field name, found keyword `effect`", span: Span { start: 16, end: 22, start_line: 3, start_col: 5 }, labels: [], suggestions: [], source_file: None, source_content: None }, Diagnostic { kind: Error, code: Some("E0100"), message: "expected handler name, found `:`", span: Span { start: 40, end: 41, start_line: 4, start_col: 12 }, labels: [], suggestions: [], source_file: None, source_content: None }]
