src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__edge_never_return.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Never,
                        span: Span {
                            start: 10,
                            end: 11,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Loop {
                                    label: None,
                                    body: Block {
                                        statements: [],
                                        expr: None,
                                        span: Span {
                                            start: 19,
                                            end: 21,
                                            start_line: 1,
                                            start_col: 20,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 14,
                                    end: 21,
                                    start_line: 1,
                                    start_col: 15,
                                },
                            },
                        ),
                        span: Span {
                            start: 12,
                            end: 23,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 23,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 23,
        start_line: 1,
        start_col: 1,
    },
}
